--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-htmltags-bml",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Barelmusenga/react-native-htmltags-bml.git"
@@ -17,5 +17,8 @@
   ],
   "author": "Barel Musenga",
   "license": "ISC",
-  "homepage": "https://github.com/Barelmusenga/react-native-htmltags-bml#readme"
+  "homepage": "https://github.com/Barelmusenga/react-native-htmltags-bml#readme",
+  "devDependencies": {
+    "metro-react-native-babel-preset": "^0.61.0"
+  }
 }
